--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@appbaseio/reactivesearch": "^4.2.2",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
@@ -22,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "scroll-carousel": "^1.2.7"
   },
